# billSherlock

./: .gitignore  README.md  bill_app.db-shm  bill_app.db-wal  bill_upload_result_6_13126a7b456a4bd79591f3eda9957fda.json  bill_upload_result_6_fa6d6b09924942b1bbdfa4649d27dbf9.json  check_ollama.py  database.py  main.py  models.py  parser.py  parser_test.py  pyproject.toml  requirements.txt  报错.txt  账单神探取证联动.crx
forensic_linkage_crx/: background.js  bridge.js  content_file.js  manifest.json  popup.html  popup.js
static/: index.html
static/js/: zh.min.js
测试用账单/: 支付宝流水2.xlsx  转化账单.csv
